corpus/c/macro_include/case-11/snapshots/gcc15/dual_sink_structured/render.default.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [macro_include] 'Box' has no member named 'missing_field' @ src/main.c:9:12
from: invocation of 'READ_MISSING' @ src/main.c:9:12
via : src/wrapper.h:1
| src/main.c:9:12
|     return READ_MISSING(box);
|            ^
from include chain:
  - src/wrapper.h:1 included from src/main.c:1

error: [macro_include] 'Box' has no member named 'missing_field'
src/main.c: In function 'main':
    1 | #define READ_MISSING(box) ((box).missing_field)
      |                                 ^
raw : src/config.h:1:33: error: 'Box' has no member named 'missing_field' @ src/config.h:1:33
| src/config.h:1:33
| #define READ_MISSING(box) ((box).missing_field)
|                                 ^
through macro expansion: preserved macro/include context